Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -78,6 +78,7 @@
 .phone span {
     font-size: 7rem;
     color: var(--orange);
+    -webkit-text-fill-color: var(--orange);
 }
 
 .headers h2 {
@@ -118,6 +119,10 @@
 .road-sign a {
     font-size: 38px;
     transform: rotate(-45deg);
+}
+
+.phone {
+    opacity: 0;
 }
 
 
